--- a/christmas.html
+++ b/christmas.html
@@ -204,7 +204,7 @@
 
         </g>
     </svg>
-    <h1 class="text typewriter">Merry Christmas</h1>
+    <h1 class="text typewriter">Merry Christmas Mai Anh</h1>
     <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin3.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/DrawSVGPlugin3.min.js"></script>
